<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/list_element">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/origin"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/departure_point"
                android:textColor="@color/labels"/>

            <TextView
                android:id="@+id/departure_time"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/departure_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/labels"/>
        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/time"
            android:textColor="@color/labels"
            app:drawableTopCompat="@drawable/arrow_right" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/destiny"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/destination_point"
                android:textColor="@color/labels" />

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:hint="@string/arrival_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/labels" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/total_number_of_stops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:gravity="center"
        android:hint="@string/stops"
        android:textColor="@color/labels" />

    <LinearLayout
        android:id="@+id/more"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/fares"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

    </LinearLayout>

    <TextView
        android:id="@+id/view_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/view_more"
        android:textColor="@color/labels"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>